--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.html
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.html
@@ -218,7 +218,7 @@
           <td mat-cell *matCellDef="let consultant" nowrap>
             <span class="action-buttons">
               <button [disabled]="!privilegeServ.hasPrivilege('EDIT_CONSULTANT')" mat-icon-button
-                *ngIf="consultant.status!='Verified' || hasAcces!='Employee'" (click)="editConsultant(consultant)"
+                *ngIf="consultant.status!='Verified' || role!='Employee'" (click)="editConsultant(consultant)"
                 class="action-button-ed">
                 <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_CONSULTANT')}">edit</mat-icon>
               </button>
@@ -260,7 +260,7 @@
               </ng-template>
               <!-- delete -->
               <button [disabled]="!privilegeServ.hasPrivilege('DELETE_CONSULTANT')"
-                *ngIf="hasAcces !== 'Employee' && hasAcces !== 'Team Lead'" mat-icon-button
+                *ngIf="role !== 'Employee' && role !== 'Team Lead'" mat-icon-button
                 (click)="deleteConsultant(consultant)" class="action-button-ed">
                 <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_CONSULTANT')}">delete</mat-icon>
               </button>
