'sourcing' flag change to 'Sourcing'. email configuration, change password, side bar and app-routing changes

--- a/src/app/components/password-change/password-change.component.html
+++ b/src/app/components/password-change/password-change.component.html
@@ -2,7 +2,7 @@
 
   <main id="main" class="main">
     <div class="pagetitle">
-      <h2> My Profile</h2>
+      <h2> Change Password</h2>
     </div>
     <section class="section profile">
       <div class="row">
@@ -72,7 +72,7 @@
 
                 <div class="text-center">
                   <button type="submit" mat-raised-button color="primary"
-                    style="margin-left:14rem;margin-top:4rem;">Change Password</button>
+                    style="margin-left:14rem;margin-top:4rem;">Submit</button>
                 </div>
               </form>
             </div>
