--- a/src/app/usit/components/pre-sourcing/onboarding/onboarding.component.html
+++ b/src/app/usit/components/pre-sourcing/onboarding/onboarding.component.html
@@ -128,12 +128,12 @@
               <ng-container
                 *ngIf="consultant.status == 'Rejected' ||  consultant.status == 'InActive'; then trueCondition else elseTemplate"></ng-container>
               <ng-template #trueCondition>
-                <button [disabled]="!privilegeServ.hasPrivilege('STATUS_CONSULTANT')" class="status-button"
+                <button class="status-button"
                   [ngClass]="consultant.status === 'Active' || consultant.status === 'Completed' || consultant.status === 'Initiated' || consultant.status === 'Verified' ? 'mat-primary' : 'mat-warn'"
                   mat-raised-button (click)="goToConsultantTrackDetails(consultant)">{{consultant.status}}</button>
               </ng-template>
               <ng-template #elseTemplate>
-                <button [disabled]="!privilegeServ.hasPrivilege('STATUS_CONSULTANT')" class="status-button"
+                <button class="status-button"
                   [ngClass]="consultant.status === 'Active' || consultant.status === 'Completed' || consultant.status === 'Initiated' || consultant.status === 'Verified' ? 'mat-primary' : 'mat-warn'"
                   mat-raised-button>{{consultant.status}}
                 </button>
@@ -146,13 +146,11 @@
             <td mat-cell *matCellDef="let consultant" nowrap>
               <span class="action-buttons">
                 <!-- Edit Button -->
-                <button 
-                  [disabled]="!privilegeServ.hasPrivilege('EDIT_CONSULTANT')" 
+                <button
                   mat-icon-button
-                  *ngIf="(consultant.status != 'Verified' || role != 'Employee') && (flag.toLocaleLowerCase() === 'onboarding')"
                   (click)="editConsultant(consultant)"
                   class="action-button-ed">
-                  <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('EDIT_CONSULTANT')}">edit</mat-icon>
+                  <mat-icon class="edit-icon">edit</mat-icon>
                 </button>
                 &nbsp;
 
@@ -160,11 +158,10 @@
                 <button 
                 mat-icon-button 
                 [style.cursor]="'pointer'"
-                *ngIf="(consultant.status != 'Verified' || role != 'Employee') && (flag.toLocaleLowerCase() === 'onboarding')"
                 (click)="moveConsultant(consultant, 'BackToPursuing')"
                 class="action-button-ed"
                 matTooltip="Move to Pursuing">
-                <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('MOVETOSALES')}">arrow_backward</mat-icon>
+                <mat-icon class="edit-icon">arrow_backward</mat-icon>
               </button>
               &nbsp;
                 
@@ -172,24 +169,21 @@
                 <button 
                   mat-icon-button 
                   [style.cursor]="'pointer'"
-                  *ngIf="(consultant.status != 'Verified' || role != 'Employee') && (flag.toLocaleLowerCase() === 'onboarding')"
                   (click)="moveConsultant(consultant, 'Closures')"
                   class="action-button-ed"
                   matTooltip="Move to Closures">
-                  <mat-icon [ngClass]="{'edit-icon': privilegeServ.hasPrivilege('MOVETOSALES')}">arrow_forward</mat-icon>
+                  <mat-icon class="edit-icon">arrow_forward</mat-icon>
                 </button>
                 &nbsp;
                 
                 <!-- Other conditions and buttons -->
           
                 <!-- Delete Button -->
-                <button 
-                  [disabled]="!privilegeServ.hasPrivilege('DELETE_CONSULTANT')" 
-                  *ngIf="role !== 'Employee' && role !== 'Team Lead'" 
+                <button
                   mat-icon-button
                   (click)="deleteConsultant(consultant)" 
                   class="action-button-ed">
-                  <mat-icon [ngClass]="{'delete-icon': privilegeServ.hasPrivilege('DELETE_CONSULTANT')}">delete</mat-icon>
+                  <mat-icon class="delete-icon">delete</mat-icon>
                 </button>
               </span>
             </td>
