Sourcing tab changes and routing from consultant-info to sourcing tabs

--- a/src/app/usit/components/pre-sourcing/onboarding/onboarding.component.html
+++ b/src/app/usit/components/pre-sourcing/onboarding/onboarding.component.html
@@ -169,7 +169,7 @@
                 <button 
                   mat-icon-button 
                   [style.cursor]="'pointer'"
-                  (click)="moveConsultant(consultant, 'Closures')"
+                  (click)="moveConsultant(consultant, 'Closure')"
                   class="action-button-ed"
                   matTooltip="Move to Closures">
                   <mat-icon class="edit-icon">arrow_forward</mat-icon>
