--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -1,8 +1,8 @@
 <div class="hot-list-container">
-    <ul class="breadcrumb">
+    <!-- <ul class="breadcrumb">
         <li><a (click)="navigateToDashboard()">Home</a></li>
         <li class="last">Portal Requirements</li>
-    </ul>
+    </ul> -->
     <div class="header-container mat-elevation-z1">
         <span class="header-text">
             Portal Requirements
@@ -12,19 +12,16 @@
                 <mat-label>Select a Portal</mat-label>
                 <mat-select (selectionChange)="onSelectionChange($event)">
                     <mat-option value="all">All</mat-option>
-                    <!-- <mat-option value="adzuna">Adzuna</mat-option> -->
                     <mat-option value="dice">Dice</mat-option>
                     <mat-option value="glassdoor">Glassdoor</mat-option>
                     <mat-option value="indeed">Indeed</mat-option>
                     <mat-option value="insight global">Insight Global</mat-option>
                     <mat-option value="jobdiva">Jobdiva</mat-option>
-                    <!-- <mat-option value="juju">Juju</mat-option> -->
                     <mat-option value="linkedin">LinkedIn</mat-option>
-                    <!-- <mat-option value="post job free">Post Job Free</mat-option> -->
                     <mat-option value="recruit.net">Recruit</mat-option>
                     <mat-option value="Simplyhired">Simply Hired</mat-option>
                     <mat-option value="techfetch">Tech Fetch</mat-option>   
-                    <!-- <mat-option value="snaprecruit">Snaprecruit</mat-option> -->
+                    <mat-option value="Jobsora">Jobsora</mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
@@ -36,99 +33,100 @@
     </div>
 
     <div id="table-container" class="table-wrapper">
-        <section class="mat-elevation-z8 hot-list-table-style">
-            <table mat-table [dataSource]="dataSource" matSort (matSortChange)="onSort($event)" oncopy="return false">
 
-                <!--- Note that these columns can be defined in any order.
-                The actual rendered columns are set as a property on the row definition" -->
+        <mat-tab-group (selectedTabChange)="onTabChanged($event)" mat-stretch-tabs="false" mat-align-tabs="start" color="primary" backgroundColor="primary">
+            <mat-tab *ngFor="let tab of tabs" [label]="tab">
+              <ng-container *ngTemplateOutlet="tableTemplate; context: { status: tab }"></ng-container>
+            </mat-tab>
+          </mat-tab-group>
 
-                <!-- SNo Column -->
-                <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number" style="width: 1%">
-                        S.No </th>
-                    <td mat-cell *matCellDef="let element" style="width: 1%"> {{element?.serialNum}}</td>
-                </ng-container>
-
-                <!-- Name Column-->
-                <ng-container matColumnDef="posted_on">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name"
-                        style="width: 2%">Posted On</th>
-                    <td mat-cell *matCellDef="let element" nowrap style="width: 2%"> {{element?.posted_on |
-                        date:'MM-dd-yyyy HH:mm'  }} </td>
-                </ng-container>
-
-
-
-                <!-- Technology Column-->
-                <ng-container matColumnDef="job_title">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Technology"
-                        style="width: 20%">
-                        Title </th>
-                    <td mat-cell *matCellDef="let element" style="width: 20%"><span class="consultant-name"><a
-                                href="{{element?.job_source}}" target="_blank"
-                                (click)="empTag(element.id)">{{element?.job_title|titlecase}}</a>
-                        </span> </td>
-                </ng-container>
-
-                <!-- Visa Column-->
-                <ng-container matColumnDef="category_skill">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Visa" style="width: 13%">
-                        Category </th>
-                    <td mat-cell *matCellDef="let element"style="width: 13%">
-                        {{ element?.category_skill | titlecase }} </td>
-                </ng-container>
-
-                <!-- Experience Column-->
-                <ng-container matColumnDef="employment_type">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience"style="width: 3%"> Emp Type </th>
-                    <td mat-cell *matCellDef="let element" style="width: 3%">{{element?.employment_type | titlecase}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="job_location">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience"style="width: 10%"> Location </th>
-                    <td mat-cell *matCellDef="let element"style="width: 10%">{{element?.job_location | titlecase}} </td>
-                </ng-container>
-
-                <!-- Rate Column-->
-                <ng-container matColumnDef="vendor">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Rate"style="width: 12%">
-                        Vendor</th>
-                        <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)" style="width: 12%"> {{element?.vendor | titlecase}}
+          <ng-template #tableTemplate>
+            <section class="mat-elevation-z8 hot-list-table-style">
+                <table mat-table [dataSource]="dataSource" oncopy="return false">
+    
+                    <!--- Note that these columns can be defined in any order.
+                    The actual rendered columns are set as a property on the row definition" -->
+    
+                    <!-- SNo Column mat-sort-header sortActionDescription="Sort by Serial Number"-->
+                    <ng-container matColumnDef="SerialNum">
+                        <th mat-header-cell *matHeaderCellDef style="width: 1%">
+                            S.No </th>
+                        <td mat-cell *matCellDef="let element" style="width: 1%"> {{element?.serialNum}}</td>
+                    </ng-container>
+    
+                    <!-- Name Column mat-sort-header sortActionDescription="Sort by Name"-->
+                    <ng-container matColumnDef="posted_on">
+                        <th mat-header-cell *matHeaderCellDef
+                            style="width: 2%">Posted On</th>
+                        <td mat-cell *matCellDef="let element" nowrap style="width: 2%"> 
+                            {{ isValidDate(element?.posted_on) ? (element?.posted_on | date:'MM-dd-yyyy HH:mm') : 'N/A' }} 
                         </td>
-                </ng-container>
+                    </ng-container>
+    
+                    <!-- Technology Column mat-sort-header sortActionDescription="Sort by Technology"-->
+                    <ng-container matColumnDef="job_title">
+                        <th mat-header-cell *matHeaderCellDef
+                            style="width: 20%">
+                            Title </th>
+                        <td mat-cell *matCellDef="let element" style="width: 20%"><span class="consultant-name"><a
+                                    href="{{element?.job_source}}" target="_blank"
+                                    >{{element?.job_title|titlecase}}</a>
+                            </span> </td>
+                    </ng-container>
+    
+                    <!-- Visa Column mat-sort-header sortActionDescription="Sort by Visa" -->
+                    <ng-container matColumnDef="category_skill">
+                        <th mat-header-cell *matHeaderCellDef style="width: 13%">
+                            Category </th>
+                        <td mat-cell *matCellDef="let element"style="width: 13%">
+                            {{ element?.category_skill | titlecase }} </td>
+                    </ng-container>
+    
+                    <!-- Experience Column  sortActionDescription="Sort by Experience"-->
+                    <ng-container matColumnDef="employment_type">
+                        <th mat-header-cell *matHeaderCellDef style="width: 3%"> Emp Type </th>
+                        <td mat-cell *matCellDef="let element" style="width: 3%">{{element?.employment_type | titlecase}} </td>
+                    </ng-container>
 
-                <!-- Body Column-->
-                <ng-container matColumnDef="JobDescription">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by JobDescription" style=" width: 3% "> Job Description </th>
-                    <td mat-cell *matCellDef="let element" class="jd-info" (click)="goToJobDescription(element)"  style=" width: 3% ">VIEW </td>
-                </ng-container>
+                    <!-- Experience Column sortActionDescription="Sort by Experience"-->
+                    <ng-container matColumnDef="job_location">
+                        <th mat-header-cell *matHeaderCellDef style="width: 10%"> Location </th>
+                        <td mat-cell *matCellDef="let element"style="width: 10%">{{element?.job_location | titlecase}} </td>
+                    </ng-container>
+    
+                    <!-- Rate Column mat-sort-header sortActionDescription="Sort by Rate"-->
+                    <ng-container matColumnDef="vendor">
+                        <th mat-header-cell *matHeaderCellDef style="width: 12%">
+                            Vendor</th>
+                            <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)" style="width: 12%"> {{element?.vendor | titlecase}}
+                            </td>
+                    </ng-container>
+    
+                    <!-- Body Column sortActionDescription="Sort by JobDescription"-->
+                    <ng-container matColumnDef="JobDescription">
+                        <th mat-header-cell *matHeaderCellDef style=" width: 3% "> Job Description </th>
+                        <td mat-cell *matCellDef="let element" class="jd-info" (click)="goToJobDescription(element)"  style=" width: 3% ">VIEW </td>
+                    </ng-container>
+    
+                    <!-- Source Column mat-sort-header sortActionDescription="Sort by Source"-->
+                    <ng-container matColumnDef="source">
+                        <th mat-header-cell *matHeaderCellDef
+                            style="width: 3%">Source</th>
+                        <td mat-cell *matCellDef="let element" nowrap style="width: 3%"> {{ element?.source | titlecase}} </td>
+                    </ng-container>
+    
+                    <!-- table ROW -->
+                    <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
+                    <tr mat-row *matRowDef="let row; columns: dataTableColumns;" [ngStyle]="getRowStyles(row)"></tr>
+                </table>
+                <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
+            </section>
+            <hr>
+          </ng-template>
 
-                <!-- Source Column-->
-                <ng-container matColumnDef="source">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Source"
-                        style="width: 3%">Source</th>
-                    <td mat-cell *matCellDef="let element" nowrap style="width: 3%"> {{ element?.source | titlecase}} </td>
-                </ng-container>
-
-                <!-- Priority Column-->
-                <!-- <ng-container matColumnDef="end_client">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Priority">
-                         Client</th>
-                    <td mat-cell *matCellDef="let element"> {{element?.end_client}}
-                    </td>
-                </ng-container> -->
-
-                <!-- table ROW -->
-                <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
-                <tr mat-row *matRowDef="let row; columns: dataTableColumns;" [ngStyle]="getRowStyles(row)"></tr>
-            </table>
-            <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
-        </section>
-        <hr>
     </div>
 
-
-    <div class="paginator">
+    <div class="paginator" *ngIf="dataSource.filteredData.length">
         <!-- paginator -->
         <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
             [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
