email-extraction and email-configuration changes

--- a/src/app/usit/components/email-extraction/email-extraction.component.html
+++ b/src/app/usit/components/email-extraction/email-extraction.component.html
@@ -8,8 +8,8 @@
             Email Extraction
         </span>
         <div class="hot-list-actions">
-            <button matTooltip="Add" matTooltipPosition="left" mat-icon-button class="add-email" (click)="addEmail()">
-                <mat-icon class="item-icon">add_circle</mat-icon>
+            <button mat-raised-button color="primary" class="add-email" (click)="extractEmails()">
+                Extract Emails
             </button>
 
             <div class="search-hot-list">
