--- a/src/app/usit/components/sales/submission-list/submission-list.component.scss
+++ b/src/app/usit/components/sales/submission-list/submission-list.component.scss
@@ -263,9 +263,9 @@ td.approve-buttons.cdk-cell.cdk-column-Approve-Reject.mat-column-Approve-Reject.
   height: 30px !important;
 }
 
-// .mat-mdc-row {
-//   height: 30px !important;
-// }
+.mat-mdc-row {
+  height: 30px !important;
+}
 
 .filter-button {
   width: fit-content;
@@ -350,6 +350,23 @@ ul.breadcrumb li:last-child {
   height: 24px;
   width: 24px;
 }
+
+// .action-buttons .mat-mdc-icon-button.mat-mdc-button-base {
+//   --mdc-icon-button-state-layer-size: 24px;
+//   width: var(--mdc-icon-button-state-layer-size);
+//   height: var(--mdc-icon-button-state-layer-size);
+//   padding: 0px !important;
+// }
+
+// ::ng-deep .action-button-ed .mat-mdc-button-touch-target {
+//   width: 24px !important;
+//   height: 24px !important;
+// }
+
+// ::ng-deep .action-button-ed .mat-mdc-focus-indicator {
+//   width: 24px !important;
+//   height: 24px !important;
+// }
 
 .action-buttons .mat-mdc-icon-button.mat-mdc-button-base {
   --mdc-icon-button-state-layer-size: 24px;
