employee dahboard applied jobs popup and upload vms excel

--- a/src/app/usit/components/vendor-management/recruiter-list/upload-vms-excel/upload-vms-excel.component.html
+++ b/src/app/usit/components/vendor-management/recruiter-list/upload-vms-excel/upload-vms-excel.component.html
@@ -95,6 +95,13 @@
                 <td mat-cell *matCellDef="let element"> {{element?.Contact}}
                 </td>
             </ng-container>
+
+            <!-- Country -->
+            <ng-container matColumnDef="Country">
+                <th mat-header-cell *matHeaderCellDef> Country </th>
+                <td mat-cell *matCellDef="let element"> {{element?.Country}}
+                </td>
+            </ng-container>
             
             <!-- table columns ends  -->
             <!-- table ROW -->
