--- a/src/app/usit/components/vendor-management/recruiter-list/upload-vms-excel/upload-vms-excel.component.scss
+++ b/src/app/usit/components/vendor-management/recruiter-list/upload-vms-excel/upload-vms-excel.component.scss
@@ -44,7 +44,8 @@ table {
 .mat-column-VendorType,
 .mat-column-CompanyType,
 .mat-column-Location,
-.mat-column-Contact {
+.mat-column-Contact,
+.mat-column-Country {
     border-right: 1px solid lightgray;
 }
 
