removing insight global and simplyhired portals

--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -15,11 +15,11 @@
                     <mat-option value="dice">Dice</mat-option>
                     <mat-option value="glassdoor">Glassdoor</mat-option>
                     <mat-option value="indeed">Indeed</mat-option>
-                    <mat-option value="insight global">Insight Global</mat-option>
+                    <!-- <mat-option value="insight global">Insight Global</mat-option> -->
                     <mat-option value="jobdiva">Jobdiva</mat-option>
                     <mat-option value="linkedin">LinkedIn</mat-option>
                     <mat-option value="recruit.net">Recruit</mat-option>
-                    <mat-option value="Simplyhired">Simply Hired</mat-option>
+                    <!-- <mat-option value="Simplyhired">Simply Hired</mat-option> -->
                     <mat-option value="techfetch">Tech Fetch</mat-option>   
                     <mat-option value="Jobsora">Jobsora</mat-option>
                 </mat-select>
