upload vms excel changes

--- a/src/app/usit/components/vendor-management/recruiter-list/upload-vms-excel/upload-vms-excel.component.html
+++ b/src/app/usit/components/vendor-management/recruiter-list/upload-vms-excel/upload-vms-excel.component.html
@@ -80,7 +80,7 @@
             <!-- CompanyType -->
             <ng-container matColumnDef="CompanyType">
                 <th mat-header-cell *matHeaderCellDef> CompanyType </th>
-                <td mat-cell *matCellDef="let element"> {{element?.companyType}}
+                <td mat-cell *matCellDef="let element"> {{element?.CompanyType}}
                 </td>
             </ng-container>
             <!-- Location -->
