--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -11,17 +11,9 @@
             <mat-form-field class="portal-form-field">
                 <mat-label>Select a Portal</mat-label>
                 <mat-select (selectionChange)="onSelectionChange($event)">
-                    <mat-option value="all">All</mat-option>
-                    <mat-option value="dice">Dice</mat-option>
-                    <mat-option value="glassdoor">Glassdoor</mat-option>
-                    <mat-option value="indeed">Indeed</mat-option>
-                    <!-- <mat-option value="insight global">Insight Global</mat-option> -->
-                    <mat-option value="jobdiva">Jobdiva</mat-option>
-                    <mat-option value="linkedin">LinkedIn</mat-option>
-                    <mat-option value="recruit.net">Recruit</mat-option>
-                    <!-- <mat-option value="Simplyhired">Simply Hired</mat-option> -->
-                    <mat-option value="techfetch">Tech Fetch</mat-option>   
-                    <mat-option value="Jobsora">Jobsora</mat-option>
+                    <mat-option *ngFor="let option of currentOptions" [value]="option.value">
+                        {{ option.label }}
+                    </mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
@@ -70,7 +62,7 @@
                             Title </th>
                         <td mat-cell *matCellDef="let element" style="width: 20%"><span class="consultant-name"><a
                                     href="{{element?.job_source}}" target="_blank"
-                                    >{{element?.job_title|titlecase}}</a>
+                                    >{{element?.job_title | titlecase}}</a>
                             </span> </td>
                     </ng-container>
     
