--- a/src/app/usit/components/openreqs/openreqs.component.html
+++ b/src/app/usit/components/openreqs/openreqs.component.html
@@ -61,7 +61,7 @@
                             style="width: 20%">
                             Title </th>
                         <td mat-cell *matCellDef="let element" style="width: 20%"><span class="consultant-name"><a
-                                    href="{{element?.job_source}}" target="_blank"
+                                    href="{{element?.job_source}}" target="_blank" (click)="empTag(element.id)"
                                     >{{element?.job_title | titlecase}}</a>
                             </span> </td>
                     </ng-container>
